syntax = "proto3";

option go_package = "github.com/i-r-l/sage/back/sageproto";

message Token {
  string access_token = 1;
  string refresh_token = 2;
  string auth_code = 3;
  string identity_token = 4;
}